Refactored Pair class (and added Ordered Pair).  Done some (incomplete) work on collision detection.