@@ -4,15 +4,17 @@ import java.awt.Graphics2D;
 import java.security.InvalidParameterException;
 import java.util.ArrayList;
 
+import utility.OrderedPair;
+import utility.Pair;
 import view.Display;
 
 
-public class Vehicle implements Traffic {
+public class Vehicle {
 	private float length;
-	private ArrayList<Float> location;
+	private OrderedPair location;
 	
 	private float speed;
-	private ArrayList<Float> direction;
+	private OrderedPair direction;
 	
 	private Color color;
 	
@@ -20,58 +22,48 @@ public class Vehicle implements Traffic {
 
 	Vehicle() {
 		length = 0;
-		location = new ArrayList<Float>();
+		location = new OrderedPair();
 		
 		speed = 0;
-		direction = new ArrayList<Float>();
+		direction = new OrderedPair();
 	}
 	
-	Vehicle(float length, ArrayList<Float> location, float speed, ArrayList<Float> direction, Color color) throws InvalidParameterException{
-		if( location.size() != direction.size() )
-			throw new InvalidParameterException( "Dimensionality of direction and location do not match." );
-		
-		if( location.size() != 2 )
-			throw new InvalidParameterException( "This applet only supports two-dimensional data.  Please check your location and direction vectors.");
-		
-		float dir_sum = 0;
-		for(int index=0; index < direction.size(); index++)
-			dir_sum += direction.get(index);
+	Vehicle(float length, OrderedPair location, float speed, OrderedPair direction, Color color) throws InvalidParameterException{
+		float dir_sum = direction.getFirst() + direction.getSecond();
 		
 		if( dir_sum == 0)
 			throw new InvalidParameterException( "Direction vector equals 0.");
 		
 		// Normalize direction of travel
-		for(int index = 0; index < direction.size(); index++)
-			direction.set(index, direction.get(index)/dir_sum);
+		direction.setFirst(direction.getFirst()/dir_sum);
+		direction.setSecond(direction.getSecond()/dir_sum);
 		
 		this.length = length;
-		this.location = new ArrayList<Float>(location);
+		this.location = new OrderedPair(location);
 		
 		this.speed = speed;
-		this.direction = new ArrayList<Float>(direction);
+		this.direction = direction;
 		
 		this.color = color;
 	}
 	
-	Vehicle(float length, ArrayList<Float> location, float speed, ArrayList<Float> direction) throws InvalidParameterException {
+	Vehicle(float length, OrderedPair location, float speed, OrderedPair direction) throws InvalidParameterException {
 		this(length, location, speed, direction, Color.WHITE);
 	}
 	
-	@Override
 	public void updatePosition(float timestep) {
-		for(int index = 0; index < location.size(); index++)
-			location.set(index, location.get(index) + direction.get(index) * speed * timestep);
+		location.setFirst(new Float(location.getFirst() + direction.getFirst() * speed * timestep));
+		location.setSecond(new Float(location.getSecond() + direction.getSecond() * speed * timestep));
 	}
 	
-	@Override
 	public void paint(Graphics2D g) {
 		int camX = Display.getInstance().getCameraX();
 		int camY = Display.getInstance().getCameraY();
 		
-		int headX = Math.round(location.get(0)) + camX;
-		int headY = Math.round(location.get(1)) + camY;
-		int tailX = Math.round(headX + direction.get(0)*length);
-		int tailY = Math.round(headY + direction.get(1)*length);
+		int headX = Math.round(location.getFirst()) + camX;
+		int headY = Math.round(location.getSecond()) + camY;
+		int tailX = Math.round(headX + direction.getFirst()*length);
+		int tailY = Math.round(headY + direction.getSecond()*length);
 		
 		g.setColor(color);
 		g.drawLine(headX, headY, tailX, tailY);
@@ -79,6 +71,26 @@ public class Vehicle implements Traffic {
 	
 	public void setColor( Color color ) {
 		this.color = color;
+	}
+	
+	public OrderedPair getHead() {
+		Float x = new Float(location.getFirst());
+		Float y = new Float(location.getSecond());
+		return new OrderedPair(x, y);
+	}
+	
+	public OrderedPair getTail() {
+		Float x = new Float(location.getFirst()) + direction.getFirst()*length;
+		Float y = new Float(location.getSecond()) + direction.getSecond()*length;
+		return new OrderedPair(x, y);
+	}
+	
+	public Pair<OrderedPair, OrderedPair> getCoords() {
+		return new Pair<OrderedPair, OrderedPair>(getHead(), getTail());
+	}
+	
+	public float getSlope() {
+		return direction.getSecond()/direction.getFirst();
 	}
 }
 
